--- a/customizer/cnx-custom-theme/scss/apps/communities/_leftnav.scss
+++ b/customizer/cnx-custom-theme/scss/apps/communities/_leftnav.scss
@@ -629,6 +629,8 @@
   }
 }
 
+#lconn_files_action_additem_2 {box-sizing: border-box !important;}
+
 // community catalog tags
 body.catalog #lotusColLeftContents .lotusSection .lotusSectionBody {
   padding: 0 $leftnav-horizontal-padding !important;
